# bayesianchainladder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
bayesianchainladder/: __init__.py  estimators.py  models.py  plots.py  risk_margin.py  utils.py
references/: Stochastic Loss Reserving Using Generalized Linear Models.txt  test-notebook.ipynb
tests/: __init__.py  conftest.py  test_estimators.py  test_models.py  test_plots.py  test_prior_predictive.py  test_risk_margin.py  test_utils.py
